--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -35,11 +35,11 @@ jobs:
         REPO_OWNER=$(echo "${GITHUB_REPOSITORY_OWNER}" | tr '[:upper:]' '[:lower:]')
         BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}" | tr '[:upper:]' '[:lower:]')
         if [ "${BRANCH_NAME}" == "main" ]; then
-          IMAGE_TAG="web-stage:latest"
+          IMAGE_TAG="stage:latest"
         elif [ "${BRANCH_NAME}" == "production" ]; then
-          IMAGE_TAG="web-production:latest"
+          IMAGE_TAG="production:latest"
         else
-          IMAGE_TAG="web-production:${BRANCH_NAME}"
+          IMAGE_TAG="production:${BRANCH_NAME}"
         fi
         echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
         echo "REPO_OWNER=${REPO_OWNER}" >> $GITHUB_ENV
@@ -50,4 +50,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ghcr.io/${{ env.REPO_OWNER }}/${{ env.IMAGE_TAG }}
+        tags: ghcr.io/${{ env.REPO_OWNER }}/${{ env.REPO_NAME }}-${{ env.IMAGE_TAG }}
